# conduit

./: .bumpversion.cfg  .editorconfig  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS.rst  CITATION.cff  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  Makefile  Makefile.bak  README.md  README.rst  codecov.yml  conduit.js  conduit.wasm  documentation-coverage-badge.json  doto-badge.json  package.json  test_include.sh  version-badge.json
tests/: CMakeLists.txt  CatchAddTests.cmake  CatchInt.cmake  CircularIndex.cc  Gatherer.cc  IRecvDuct.cc  ISendDuct.cc  Makefile  MaketemplateForwarding  MaketemplateMultiproc  MaketemplateMultithread  MaketemplateRunning  MaketemplateUniproc  MultiprocessReporter.h  MultiprocessReporter.hpp  ProcDuct.h  ProcessDuct.cc  ThreadDuct.cc  ThreadDuct.h  all_tests.txt  convert_for_tests.sh  example.cc  main.cpp  math_utils.cc  safe_compare.cc
tests/algorithm/: upper_uniquify.cpp
tests/assign/: AssignContiguously.cpp  AssignIntegrated.cpp  AssignRandomly.cpp  AssignRoundRobin.cpp  AssignSegregated.cpp  GenerateMetisAssignments.cpp  Makefile
tests/concurrent/: ConcurrentTimeoutBarrier.cpp  Gatherer.cc  Gatherer.cpp  Makefile  ThreadSafeIbarrierRequest.cpp  TimeoutBarrier.cpp
tests/conduit/: Makefile
tests/conduit/conduit/: Conduit.cc  Conduit.cpp  Duct.cc  Duct.cpp  ImplSpec.cc  ImplSpec.cpp  Inlet.cc  Inlet.cpp  InterProcAddress.cpp  Makefile  Outlet.cc  Outlet.cpp  Sink.cc  Sink.cpp  Source.cc  Source.cpp
tests/conduit/intra/: HeadTailDuct.cpp  IntraDuct.h  IntraDuct.hpp  Makefile  PendingDuct.cc  SerialPendingDuct.cpp  ValueIntraDuct.hpp
tests/conduit/mock/: EmpAssertDuct.cpp  Makefile  NopDuct.cpp  ThrowDuct.cpp
tests/conduit/proc/: FixedVectorProcDuct.hpp  IMsgDuct.cc  InterProcAddress.cc  InterProcAddress.cpp  Makefile  MsgDuct.cc  MsgDuct.cpp  ProcDuct.h  ProcDuct.hpp  RMsgDuct.cc  RMsgDuct.cpp  RdmaDuct.cpp  RmsgDuct.cpp  SharedBackEnd.cc  SharedBackEnd.cpp  SteppingProcDuct.hpp  VectorProcDuct.hpp  WindowDuct.cc
tests/conduit/thread/: AccumulatingThreadDuct.hpp  AtomicPendingDuct.cc  AtomicPendingDuct.cpp  HeadTailDuct.cc  HeadTailDuct.cpp  Makefile  MoodyCamelDuct.cpp  RigtorpDuct.cpp  SteppingThreadDuct.hpp  ThreadDuct.h  ThreadDuct.hpp
tests/containers/: Makefile
tests/containers/safe/: Makefile  deque.cpp  list.cpp  unordered_map.cpp  vector.cpp
tests/countdown/: CountdownProgressBar.cpp  Makefile  ProgressBar.cpp
tests/datastructs/: Makefile  MirroredRingBuffer.cpp  RingBuffer.cpp  SiftingArray.cpp  VectorMap.cpp
tests/debug/: IsFirstExecutionChecker.cpp  Makefile  OncePerThreadChecker.cpp  WarnOnce.cpp  safe_compare.cpp
tests/distributed/: DistributedTimeoutBarrier.cpp  IrsendFunctor.cpp  IsendFunctor.cpp  MPIGuard.cc  MPIGuard.cpp  Makefile  Request.cpp  RsendFunctor.cpp  SendFunctor.cpp  do_successively.cpp  group_utils.cc  group_utils.cpp  mpi_types.cpp  mpi_utils.cc  mpi_utils.cpp
tests/initialization/: Makefile  Uninitialized.cpp  ValueInitialized.cpp
tests/math/: Makefile  math_utils.cpp
tests/mesh/: Makefile  Mesh.cc  Mesh.cpp  MeshNode.cc  MeshNode.cpp  MeshNodeInput.cc  MeshNodeInput.cpp  MeshNodeOutput.cc  MeshNodeOutput.cpp  MeshTopology.cc  MeshTopology.cpp
tests/meta/: Curry.cpp  IdentityWrapper.cpp  Makefile
tests/mpi/: IrsendFunctor.cpp  IsendFunctor.cpp  MPIGuard.cpp  Makefile  MpiGuard.cpp  MpiMultithreadGuard.cpp  Request.cpp  RsendFunctor.cpp  SendFunctor.cpp  comm_utils.cpp  group_utils.cpp  mpi_types.cpp  mpi_utils.cpp  request_utils.cpp  routine_functors.cpp
tests/netuit/: Makefile
tests/netuit/arrange/: CompleteTopologyFactory.cpp  DyadicTopologyFactory.cpp  LoopTopologyFactory.cpp  Makefile  NetworkXTester.hpp  ProConTopologyFactory.cpp  RingTopologyFactory.cpp  ToroidalTopologyFactory.cpp
tests/netuit/assign/: Makefile  (+8 more)
tests/nonce/: CircularIndex.cpp  Makefile  ScopeGuard.cpp  spector.cpp
tests/parallel/: AlignedImplicit.cpp  AlignedInherit.cpp  Makefile  OncePerThreadChecker.cpp  ParallelTimeoutBarrier.cpp  RecursiveExclusiveLock.cpp  RecursiveMutex.cpp  RelaxedAtomic.cpp  ThreadIbarrier.cpp  ThreadIbarrierFactory.cpp  ThreadLocalChecker.cpp  ThreadMap.cpp
tests/sanitycheck/: Makefile
tests/topology/: DyadicTopologyFactory.cc  DyadicTopologyFactory.cpp  LoopTopologyFactory.cc  LoopTopologyFactory.cpp  Makefile  ProConTopologyFactory.cc  ProConTopologyFactory.cpp  ProconTopologyFactory.cc  RingTopologyFactory.cc  RingTopologyFactory.cpp  TopoEdge.cc  TopoEdge.cpp  TopoNode.cc  TopoNode.cpp  TopoNodeInput.cc  TopoNodeInput.cpp  TopoNodeOutput.cc  TopoNodeOutput.cpp  Topology.cc  ToroidalTopologyFactory.cpp  factory_common.hpp
tests/uit/: Makefile
tests/uitsl/: Makefile
tests/utility/: CircularIndex.cc  CircularIndex.cpp  CountdownProgressBar.cpp  Curry.cc  Curry.cpp  IdentityWrapper.cpp  IsFirstExecutionChecker.cpp  Makefile  MirroredRingBuffer.cpp  NamedArrayElement.cpp  PrefilledMirroredRingBuffer.cpp  RingBuffer.cpp  ScopeGuard.cc  ScopeGuard.cpp  SiftingArray.cpp  Uninitialized.cpp  ValueInitialized.cpp  VectorMap.cpp  WarnOnce.cpp  imemstream.cpp  mapping_utils.cpp  math_utils.cc  math_utils.cpp  safe_compare.cc  safe_compare.cpp  spector.cpp  upper_uniquify.cpp
(+2849 files in other folders)
